# hs-vm

./: .gitignore  Action.hs  Assembler.hs  Core.hs  Engine.hs  Instruction.hs  Interpreter.hs  Main.hs  Makefile  Parser.hs  README.md  VM.hs  foo.hs  hs-vm.cabal  new_design.hs  old_design.hs  test.s
app/: Assembler.hs  Engine.hs  Interpreter.hs
examples/: hello_world.s
programs/: e.s  hello_world.s
src/: Engine.hs
