cabal-version:   3.0
name:            hs-vm
version:         0.1.0.0
license:         NONE
author:          antonius.txt@gmail.com
maintainer:      ceb6
build-type:      Simple

common warnings
    ghc-options: -Wall -Wextra -Wno-unused-do-bind

common engine
    other-modules:      Engine

    build-depends:      base ^>=4.16.4.0
                      , vector

    default-extensions: TupleSections

executable asm
    import:           warnings
                    , engine

    main-is:          Assembler.hs

    build-depends:    base ^>=4.16.4.0
                    , binary
                    , filepath

    hs-source-dirs:   app

    default-language: Haskell2010

executable interpreter
    import:           warnings
                    , engine

    main-is:          Interpreter.hs

    build-depends:    base ^>=4.16.4.0
                    , binary

    hs-source-dirs:   app

    default-language: Haskell2010
