cabal-version:   3.0
name:            hs-vm
version:         0.1.0.0
license:         NONE
author:          amhsm6@gmail.com
maintainer:      amhsm6
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Engine

    build-depends:    base ^>=4.18.2.1
                    , vector
                    , containers
                    , unix
                    , libffi

    hs-source-dirs:   src

    default-language: Haskell2010

    default-extensions: TupleSections

executable asm
    import:           warnings

    main-is:          Assembler.hs

    build-depends:    base ^>=4.18.2.1
                    , hs-vm
                    , binary
                    , filepath

    hs-source-dirs:   app

    default-language: Haskell2010

executable interpreter
    import:           warnings

    main-is:          Interpreter.hs

    build-depends:    base ^>=4.18.2.1
                    , hs-vm
                    , binary

    hs-source-dirs:   app

    default-language: Haskell2010
